Stop using deprecated CSS for text overflow
`word-break: break-word` has been deprecated an can be archieved with `overflow-wrap: anywhere` combied with default `word-break: normal`.

--- a/src/app/standalone/answer-grid-list/answer-grid-list.component.scss
+++ b/src/app/standalone/answer-grid-list/answer-grid-list.component.scss
@@ -2,7 +2,7 @@
 
 .answer {
   font-size: $s-font-size;
-  word-break: break-word;
+  overflow-wrap: anywhere;
   line-height: 1.4;
   height: 40px;
   overflow: hidden;
