--- a/src/app/standalone/content-leaderboard/content-leaderboard.component.scss
+++ b/src/app/standalone/content-leaderboard/content-leaderboard.component.scss
@@ -35,7 +35,7 @@ mat-icon {
 
 .alias {
   hyphens: auto;
-  word-break: break-word;
+  overflow-wrap: anywhere;
 }
 
 .timer-icon {
